syntax = "proto2";

package Zko;

import "./component.proto";
import "./mesh.proto";
import "./material.proto";
import "./skeleton.proto";

message ZkModel {
  required string id = 1;
  required string name = 2;

  required ZkTransform transform = 3;

  required ZkMesh mesh = 4;
  optional ZkMaterial material = 6;
  optional ZkRefSkeleton skeleton = 7;
  optional ZkSkinning skinning = 8;
}
