syntax = "proto2";

package Zko;

import "./commons.proto";
import "./math.proto";
import "./group.proto";
import "./scene.proto";
import "./model.proto";
import "./camera.proto";
import "./skeleton.proto";

message ProtoZkObject {
  required string type = 1;

  optional ZkScene scene = 2;
  optional ZkGroup group = 3;
  optional ZkModel model = 4;
  optional ZkCamera camera = 5;
  optional ZkSkeleton skeleton = 6;
  optional ZkJoint joint = 7;

  repeated ProtoZkObject children = 100;
}

